[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
ockam = "0.70.0"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_off"] }
libsodium-sys-stable = "1.19.22"
libc = "0.2.0"
bytelines = "2.4.0"
